# clawproof

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SKILL.md  dory_srs_22_variables.srs  dory_srs_28_variables.srs  render.yaml
.github/workflows/: ci.yml
converter/: Dockerfile  main.py  requirements.txt
data/: proofgate.db-shm  proofgate.db-wal
mcp-server/: Cargo.toml
mcp-server/src/: main.rs  tools.rs
models/agent_trust/: model.toml  network.onnx  train.py  vocab.json
models/authorization/: model.toml  network.onnx  vocab.json
models/sentiment/: model.toml
models/spam_detector/: model.toml
moltbook/: STRATEGY.md
moltbook/posts/: 01-skill-drop-tools.md  02-announcement-openclaw.md  03-guide-ai.md  04-showcase-crypto.md  05-reply-templates.md
sdks/js/: package-lock.json  package.json  tsconfig.json
sdks/js/src/: client.ts  index.ts  types.ts
sdks/python/: pyproject.toml
sdks/python/clawproof/: __init__.py  client.py  types.py
src/: config.rs  crypto.rs  geo.rs  input.rs  main.rs  models.rs  openapi_spec.json  prover.rs  receipt.rs  state.rs
src/handlers/: agent_lookup.rs  badge.rs  batch.rs  convert.rs  health.rs  metrics.rs  mod.rs  models.rs  openapi.rs  prove.rs  prove_model.rs  receipt.rs  receipts_list.rs  static_update.rs  upload.rs  verify.rs
src/templates/: mod.rs  playground.rs  receipt_page.rs
static/: playground.html  receipt.html
