[package]
name = "clawproof-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for ClawProof zkML proof generation"

[[bin]]
name = "clawproof-mcp"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
