[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawproof"
version = "0.1.0"
description = "Python SDK for the ClawProof zkML proof generation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/your-org/clawproof"
Documentation = "https://github.com/your-org/clawproof/tree/main/sdks/python"
Repository = "https://github.com/your-org/clawproof"
